# funsearch

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: validate.yml
data/backups/: program_db_priority_1727896797_0.pickle  program_db_priority_1727966688_0.pickle  program_db_priority_1727966985_0.pickle  program_db_priority_1727967078_0.pickle  program_db_priority_1727967145_0.pickle  program_db_priority_1727968232_0.pickle  program_db_priority_1727968311_0.pickle  program_db_priority_1727968668_0.pickle  program_db_priority_1727968734_0.pickle  program_db_priority_1727968753_0.pickle  program_db_priority_1727969032_0.pickle  program_db_priority_1727969081_0.pickle  program_db_priority_1727969172_0.pickle  program_db_priority_1727969208_0.pickle  program_db_priority_1727969456_0.pickle  program_db_priority_1727969601_0.pickle  program_db_priority_1727969875_0.pickle  program_db_priority_1727969976_0.pickle  program_db_priority_1727971348_0.pickle  program_db_priority_1727971536_0.pickle  program_db_priority_1727971545_0.pickle  program_db_priority_1727971630_0.pickle  program_db_priority_1727971808_0.pickle  program_db_priority_1727975894_0.pickle  program_db_priority_1727975923_0.pickle  program_db_priority_1727976169_0.pickle  program_db_priority_1727976240_0.pickle  program_db_priority_1727977871_0.pickle  program_db_priority_1727978261_0.pickle  (+2 more)
examples/: Example_Implementation_SPEC.py  cap_set_spec.py  cap_set_spec_small.py  cap_set_spec_zero.py  is_prime.py  isosceles.py  kernel_search.py  nat_spec.py  salem_spencer.py  specification_nonsymmetric_admissible_set.py  test_LLL.ipynb  test_cap_set.ipynb  test_no3points_in_line.ipynb  test_no3points_in_line.py  test_salem_spencer.ipynb
funsearch/: OLD__main__.py  __init__.py  __main__.py  async_agents.py  best_programs  code_manipulation.py  config.py  core.py  evaluator.py  funsearch_test.py  logging_stats.py  models.py  multi_testing.py  programs_database.py  programs_database_test.py  sampler.py  sandbox.py  test.ipynb  test_security.ipynb  test_security_2.ipynb
tests/: code_manipulation_test.py  evaluator_test.py  funsearch_test.py  main_test.py  mock_model_test.py  programs_database_test.py  sandbox_test.py  security_test.py  test_mock_run.py
(+1067 files in other folders)
