[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["funsearch", "funsearch.container", "funsearch.utilities"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "funsearch"
dynamic = [
  "version",
  "dependencies"
]
description = "FunSearch algorithm: Mathematical discoveries from program search with large language models"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
funsearch = "funsearch.__main__:main"

